<resources>

    <string name="app_name">Local Guide</string>
    <string name="main_unlock">Unlock the best of FunTravel</string>
    <string name="main_connect">Connect with locals and become part of the community now.</string>
    <string name="register">Register</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="login_welcome">Welcome back, login</string>
    <string name="login_switch">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot your password?</string>
    <string name="signup_welcome">Sign up for free</string>
    <string name="signup_switch">Already have an account?</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="join">Join</string>
    <string name="title_resend_password">Recovering account by email</string>
    <string name="resend_password">Forgot password ?</string>
    <string name="enter_email">Please enter your email</string>
    <string name="send">Send</string>
    <string name="role_selection">Travel or Guide? Please select : </string>
    <string name="traveler">Traveler</string>
    <string name="signup_guide">Sign up as Guide</string>
    <string name="guide">Guide</string>

    <string name="pref_file_name">com.example.localguide</string>
    <string name="default_value">null</string>
    <string name="userID_stored">UserID</string>
    <string name="email_stored">email</string>
    <string name="image_stored">image</string>
    <string name="name_stored">name</string>
    <string name="role_stored">role</string>


    <string name="about">About</string>
    <string name="about_malaysia">
        Malaysia is a multi–ethnic, multicultural, and multilingual society,
        and the many ethnic groups in Malaysia maintain separate cultural identities.
        The society of Malaysia has been described as \"Asia in miniature\".
    </string>
    <string name="language_title">Language(s)</string>
    <string name="language">English, Malay, Chinese, Tamil</string>
    <string name="etiquette_title">Etiquette</string>
    <string name="etiquette">Greetings in a social context will depend upon the ethnicity of the person you are meeting. In general, most Malays are aware of Western ways so the handshake is normal. There may be slight differences though and a few things to bear in mind include:
        \nMalay women may not shake hands with men. Women can of course shake hands with women. Men may also not shake hands with women and may bow instead while placing their hand on their heart.
        \nThe Chinese handshake is light and may be rather prolonged. Men and women may shake hands, although the woman must extend her hand first. Many older Chinese lower their eyes during the greeting as a sign of respect.
        \nIndians shake hands with members of the same sex. When being introduced to someone of the opposite sex, nodding the head and smiling is usually sufficient.
    </string>
    <string name="ethnicity_title">Ethnicity</string>
    <string name="ethnicity">Malay 50.4%, Chinese 23.7%, indigenous 11%, Indian 7.1%, others 7.8%</string>
    <string name="malaysia">Malaysia</string>
    <string name="religion_title">Religion(s)</string>
    <string name="religion">Muslim 60.4%, Buddhist 19.2%, Christian 9.1%, Hindu 6.3%, Confucianism, Taoism, other traditional Chinese religions 2.6%, other or unknown 1.5%, none 0.8%</string>
    <string name="editName">Edit Name</string>
    <string name="editEmail">Edit Email</string>
    <string name="savebtn">Save</string>
    <string name="cancelbtn">Cancel</string>
    <string name="editprofile">Edit Profile</string>
    <string name="favaourite">Favourite</string>
    <string name="setting">Setting</string>
    <string name="signout">Sign Out</string>
    <string name="url_server">https://funtravel123.000webhostapp.com/</string>
    <string name="url_read_one_country">api/country/read_one.php</string>
    <string name="url_read_all_country">api/country/read.php</string>
    <string name="url_update_country">api/country/update.php</string>


    <string name="stringEmail">Please enter your new email</string>
    <string name="stringPassword">To save this setting, please enter your FunTravel password.</string>
    <string name="stringChangePassword">Your password should be at least 6 characters above and contain number, lower and upper character, and special character.</string>
    <string name="buttonDone">Done</string>
    <string name="buttonConfirm">Confirm</string>
    <string name="buttonCancel">Cancel</string>
    <string name="newPassoword">New Password</string>
    <string name="confirmPassoword">Confirm Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="favourite_country_guide">Favourite Country Guide</string>
    <string name="china">China</string>
    <string name="london">London</string>
    <string name="country_guide_cultre">Country Guide Culture</string>
    <string name="thailand">Thailand</string>
    <string name="singapore">Singapore</string>
</resources>
